assignment-2/nginx-nodeport-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
